--- a/scss/layout/_page.scss
+++ b/scss/layout/_page.scss
@@ -1,40 +1,119 @@
-.page{
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-    background: #181818;
-    color: #fff;
-    padding: 50px;
 
-    a{
-        border-top: 1px solid #ccc;
-        border-bottom: 1px solid #ccc;
-        color: #fff;
-        text-decoration: none;
+$border: 2px solid #641a7f;
         
-        .active{
-            color: #8a4fff;
-            border: 1px solid #8a4fff;
+.news {
+    background: #181818;
+    color: $white-color;
+
+    .news__heading {
+        text-align: center;
+        span {
+            text-transform: uppercase;
+            font-size: 1.5em;
+            font-weight: 600;
+            padding: 10px;
+            border-bottom: 1px solid;
         }
-        .active:hover{
-            color: #8a4fff;
-            border: 1px solid #8a4fff;
-        }
-    
-        li{
-            margin: 5px;
-            height: 40px;
-            width: 40px;
-            border-radius: 100%;
-            // line-height: 40px;
+    }
+
+    .news__menu{
+        margin: 20px auto;
+        max-width: 1024px - 20px;
+        display: flex;
+        border-top: $border;
+        border-bottom: $border;
+
+        .news__menu--item{
+            text-transform: uppercase;
             text-align: center;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
+            padding: 5px 10px;
+            min-width: 100px;
+            border-left: $border;
+        }
+        .news__menu--item:hover{
+            background: $primary-color;
         }
 
-        li:hover{
-            border: 1px solid #fff;
+    }
+    .news__item__group{
+        margin: 20px auto;
+        max-width: 1024px;
+
+        .news__item{
+            padding: 10px;
+            color: #fff;
+            text-decoration: none;
+            display: flex;
+            justify-items: stretch;
+            box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+
+            .bg__dark{
+                background: #242526;
+                // box-shadow: 1px 1px 5px #888888 .8;
+            
+
+            .news__item--image{
+                width: 100%;
+                height: 210px;
+                object-fit: cover;
+            }
+
+            .news__item--date{
+                padding: 10px 0 0 10px;
+            }
+
+            .news__item--title{
+                font-size: 1.2em;
+                text-transform: uppercase;
+                font-weight: 600;
+                padding: 0 10px;
+            }
+
+            .news__item--desc{
+                text-align: justify;
+                padding: 10px;
+            }
+        }
+        }
+    }
+
+    .page {
+        margin: 0 auto;
+        display: flex;
+        justify-content: center;
+        color: #fff;
+        padding: 50px;
+
+        a {
+            border-top: 1px solid #ccc;
+            border-bottom: 1px solid #ccc;
+            color: #fff;
+            text-decoration: none;
+
+            .active {
+                color: $primary-color;
+                border: $border;
+            }
+            .active:hover {
+                color: $primary-color;
+                border: $border;
+            }
+
+            li {
+                margin: 5px;
+                height: 40px;
+                width: 40px;
+                border-radius: 100%;
+                // line-height: 40px;
+                text-align: center;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+            }
+
+            li:hover {
+                border: 1px solid #fff;
+            }
         }
     }
 }
