--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -18,7 +18,7 @@
         0% {
             transform: translate(-100vw);
         }
-        100%{
+        100% {
             transform: translate(0px);
         }
     }
@@ -27,13 +27,13 @@
         0% {
             transform: translate(0);
         }
-        100%{
+        100% {
             transform: translate(-100vw);
         }
     }
 
     .moblie__menu {
-        opacity: .95;
+        opacity: 0.95;
         position: fixed;
         top: 0;
         // left: 0;
@@ -59,7 +59,7 @@
             box-shadow: 0px 2px 5px #aaaaaa;
         }
 
-        .moblie__menu__close:hover i{
+        .moblie__menu__close:hover i {
             transform: scale(1.1);
         }
 
@@ -72,12 +72,12 @@
                 $font-size: 1.3em;
                 text-decoration: none;
                 display: flex;
-                line-height:$font-size;
+                line-height: $font-size;
 
-                .sub-icon{
+                .sub-icon {
                     position: absolute;
-                    line-height: .9em;
-                    font-size: .9em;
+                    line-height: 0.9em;
+                    font-size: 0.9em;
                     right: 10px;
                 }
 
@@ -91,7 +91,7 @@
                     font-size: $font-size;
                 }
             }
-            
+
             .sub-menu {
                 display: flex;
                 flex-direction: column;
@@ -108,11 +108,11 @@
             }
         }
 
-        .menu__item:hover .sub-menu{
+        .menu__item:hover .sub-menu {
             display: flex;
         }
 
-        .menu__item + .menu__item{
+        .menu__item + .menu__item {
             padding-top: 10px;
             margin-top: 1px;
         }
@@ -130,6 +130,8 @@
     background: $white-color;
     justify-content: space-between;
     box-shadow: 0px 2px 5px #aaaaaa;
+    z-index: 99;
+    color: $primary-color;
 
     .header__logo {
         $margin_top: 18px;
@@ -155,6 +157,9 @@
                 text-transform: uppercase;
                 text-align: center;
                 padding: 0 5px;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
 
                 i {
                     padding-right: 6px;
@@ -165,13 +170,42 @@
                     color: $black-color;
                 }
 
+                @-webkit-keyframes sub_menu {
+                    from {
+                        top: 0vh;
+                        opacity: 0;
+                    }
+                
+                    to {
+                        top: $header-height;
+                        opacity: 1;
+                    }
+                }
+                
+                @keyframes sub_menu {
+                    from {
+                        top: 0vh;
+                        opacity: 0;
+                    }
+                
+                    to {
+                        top: $header-height;
+                        opacity: 1;
+                    }
+                }
+
                 .sub-menu {
+                    top: $header-height;
                     display: none;
                     flex-direction: column;
                     position: absolute;
                     background: #fff;
                     box-shadow: 0px 2px 5px #aaaaaa;
                     margin-left: -5px;
+                    -webkit-animation-name: sub_menu;
+                    -webkit-animation-duration: .5s;
+                    animation-name: sub_menu;
+                    animation-duration: .5s;
 
                     .sub-menu__item {
                         min-width: 150px;
@@ -199,7 +233,7 @@
             }
             .menu__item:hover {
                 color: $primary-color;
-                border-bottom: 3px solid $primary-color;
+                // border-bottom: 3px solid $primary-color;
             }
 
             .menu__item:hover a {
@@ -255,9 +289,63 @@
     .header__login {
         text-align: right;
         padding: 0 $header-padding;
+        display: flex;
         a {
             color: $primary-color;
             text-decoration: none;
+        }
+
+        .noty {
+            height: 40px;
+            width: 40px;
+            position: relative;
+            border: 1px solid $primary-color;
+            border-radius: 100%;
+            margin: 10px;
+            line-height: 40px;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            text-align: center;
+            background: $primary-color;
+            color: #fff;
+
+
+            .noty__total {
+                background: red;
+                position: absolute;
+                top: -6px;
+                right: -6px;
+                font-size: 13px;
+                line-height: 20px;
+                height: 20px;
+                width: 20px;
+                font-weight: 600;
+                border-radius: 100%;
+                color: #fff;
+            }
+        }
+
+        .noty:hover{
+            background: #fff;
+            color: $primary-color;
+        }
+
+        .noty:hover i{
+            transform: scale(1.2);
+            animation: all 1s;
+        }
+
+        img{
+            margin: 10px 0;
+            width: 40px;
+            height: 40px;
+        }
+        img:hover{
+            opacity: .8;
+            transform: scale(1.02);
+            animation: all .5s;
         }
     }
 }
