--- a/scss/layout/_page.scss
+++ b/scss/layout/_page.scss
@@ -1,9 +1,9 @@
-
 $border: 2px solid #641a7f;
-        
+
 .news {
     background: #181818;
     color: $white-color;
+    padding: 10px;
 
     .news__heading {
         text-align: center;
@@ -16,64 +16,68 @@ $border: 2px solid #641a7f;
         }
     }
 
-    .news__menu{
+    .news__menu {
         margin: 20px auto;
-        max-width: 1024px - 20px;
+        // max-width: 1024px - 20px;
         display: flex;
         border-top: $border;
         border-bottom: $border;
 
-        .news__menu--item{
+        .news__menu--item {
             text-transform: uppercase;
             text-align: center;
             padding: 5px 10px;
             min-width: 100px;
             border-left: $border;
         }
-        .news__menu--item:hover{
+        .news__menu--item:hover {
             background: $primary-color;
         }
-
     }
-    .news__item__group{
-        margin: 20px auto;
-        max-width: 1024px;
+    .news__item__group {
+        margin: 20px -10px;
+        // max-width: 1024px;
 
-        .news__item{
+        .news__item {
             padding: 10px;
             color: #fff;
             text-decoration: none;
             display: flex;
             justify-items: stretch;
-            box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+            box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+            transition: all .5s;
 
-            .bg__dark{
+            .bg__dark {
                 background: #242526;
                 // box-shadow: 1px 1px 5px #888888 .8;
-            
 
-            .news__item--image{
-                width: 100%;
-                height: 210px;
-                object-fit: cover;
-            }
+                .news__item--image {
+                    width: 100%;
+                    height: 210px;
+                    object-fit: cover;
+                }
 
-            .news__item--date{
-                padding: 10px 0 0 10px;
-            }
+                .news__item--date {
+                    padding: 10px 0 0 10px;
+                }
 
-            .news__item--title{
-                font-size: 1.2em;
-                text-transform: uppercase;
-                font-weight: 600;
-                padding: 0 10px;
-            }
+                .news__item--title {
+                    font-size: 1.2em;
+                    text-transform: uppercase;
+                    font-weight: 600;
+                    padding: 0 10px;
+                }
 
-            .news__item--desc{
-                text-align: justify;
-                padding: 10px;
+                .news__item--desc {
+                    text-align: justify;
+                    padding: 10px;
+                }
             }
         }
+
+        .news__item:hover {
+            transform: scale(1.02);
+            transition: all .5s;
         }
     }
 
