--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa&display=swap');
 @import "avariables";
 @import "all";
 @import "layout/header";
 @import "layout/main";
 @import "layout/footer";
 @import "layout/page";
+@import "layout/dialog";
