--- a/scss/_avariables.scss
+++ b/scss/_avariables.scss
@@ -2,7 +2,7 @@ $header-height: 60px;
 $header-padding: 30px;
 
 
-$primary-color: #641a7f;
+$primary-color: #f62681;
 $black-color: #181818;
 $white-color: #ffffff;
 
