--- a/scss/layout/_page.scss
+++ b/scss/layout/_page.scss
@@ -1,18 +1,22 @@
-$border: 2px solid #641a7f;
+$border: 2px solid $primary-color;
 
 .news {
-    background: #181818;
+    // background: #181818;
     color: $white-color;
     padding: 10px;
 
     .news__heading {
         text-align: center;
+        margin: 20px 5px;
+        padding: 30px;
+        border: 1px solid $primary-color;
         span {
+            color: $primary-color;
             text-transform: uppercase;
             font-size: 1.5em;
             font-weight: 600;
             padding: 10px;
-            border-bottom: 1px solid;
+            // border-bottom: 1px solid;
         }
     }
 
@@ -39,17 +43,20 @@ $border: 2px solid #641a7f;
         // max-width: 1024px;
 
         .news__item {
-            padding: 10px;
-            color: #fff;
+            padding: 20px;
+            color: #242526;
             text-decoration: none;
             display: flex;
             justify-items: stretch;
-            box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
-            transition: all .5s;
+            // box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+            transition: all 0.5s;
 
             .bg__dark {
-                background: #242526;
-                // box-shadow: 1px 1px 5px #888888 .8;
+                // background: #242526;
+                width: 100%;
+                box-shadow: 1px 1px 5px #888888 0.8;
+                display: flex;
+                flex-direction: column;
 
                 .news__item--image {
                     width: 100%;
@@ -71,13 +78,73 @@ $border: 2px solid #641a7f;
                 .news__item--desc {
                     text-align: justify;
                     padding: 10px;
+                    font-size: 1.3em;
+                    font-weight: 600;
+                }
+
+                .news__item--btn {
+                    padding: 10px;
+                    background: $primary-color;
+                    font-size: 1.3em;
+                    color: #fff;
+                    position: absolute;
+                    display: block;
+                    bottom: 20px;
+                    right: 20px;
+                    background: transparent;
+                    text-decoration: none;
+                }
+                .news__item--btn:hover {
+                    a {
+                        text-decoration: none;
+                    }
                 }
             }
         }
 
         .news__item:hover {
             transform: scale(1.02);
-            transition: all .5s;
+            transition: all 0.5s;
+            box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 20px;
+            opacity: 0.8;
+        }
+        .news__item:hover .news__item--btn {
+            background: $primary-color;
+            display: block;
+            bottom: 20px;
+            right: 20px;
+            transition: all 0.8s;
+        }
+        .news__item:hover .bg__dark {
+            padding-bottom: 47px;
+        }
+    }
+
+    .__footer {
+        .social {
+            padding: 10px 20px;
+            color: #fff;
+            text-decoration: none;
+            .social__link {
+                background: $primary-color;
+                border-radius: 20px;
+                box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 20px;
+                .social--title {
+                    font-size: 1.2em;
+                    font-weight: 600;
+                }
+            }
+            img {
+                padding: 30px;
+                width: 100px;
+                height: 100px;
+                border-radius: 100%;
+            }
+        }
+        .social:hover {
+            transform: scale(1.02);
+            transition: all 0.5s;
+            opacity: 0.8;
         }
     }
 
